# ChangeLog for dev-ruby/factory_girl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/factory_girl/ChangeLog,v 1.5 2014/08/05 22:59:08 mrueg Exp $

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> factory_girl-4.2.0-r1.ebuild:
  Remove ruby18 target.

*factory_girl-4.4.0 (03 May 2014)

  03 May 2014; Hans de Graaff <graaff@gentoo.org> +factory_girl-4.4.0.ebuild:
  Version bump. Install documentation.

*factory_girl-4.2.0-r1 (20 Aug 2013)

  20 Aug 2013; Rick Farina <zerochaos@gentoo.org> +factory_girl-4.2.0-r1.ebuild,
  -factory_girl-4.2.0.ebuild:
  clean up, ship a few more files for fun

  20 Aug 2013; Rick Farina <zerochaos@gentoo.org> factory_girl-4.2.0.ebuild:
  correct homepage and license

*factory_girl-4.2.0 (20 Aug 2013)

  20 Aug 2013; Rick Farina <zerochaos@gentoo.org> +factory_girl-4.2.0.ebuild,
  +metadata.xml:
  initial commit of factory_girl, a dep for development of metasploit