@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST factory_girl-4.2.0.gem 60416 SHA256 c1e47e17da6bbf6dd47e402295296311abc1eeb22ccd6862a2d9d6bcedfc6c50 SHA512 96417a404d7930e9f553ddc5de37ddbe4bf6f5853afd87d83f12c11f70f440c3f2c1a66b47a103dc2cd0d8ca643c584cadc92268d867497b75d56b43700b568b WHIRLPOOL 227910dc99bcddef7e18d90e03c5741f451bd73603246b3be85a20796766413e24df9e6f36f9117c56567d18957a96c03efdf4310bbf495798f3846f69b30de1
 DIST factory_girl-4.4.0.gem 62976 SHA256 4daa112a2dcd4524d1f2bec81f73cccdc9ed8f3e9112523300de70764db10f72 SHA512 094ff5536c8663b4e8fb6ad35b6575a710296b9b2258e617fe5624c882080ca6721c5cff15a92d705d5d4d3604400269f25624b2b88eea330bc7fe097ba83716 WHIRLPOOL 7afa3f1ea69d353fcf0a096d9b01075a4ef82476fd9de949c2efb19a1b8d8a1a069d10b9b8fdfac1046ffccdf3990dd5957920486c42cf9f293d8600c5432ad9
+DIST factory_girl-4.5.0.gem 64000 SHA256 4078a55b2ca6f56c8cde9af1d4d6f14f9bf040ff9e141474fdb6c51ad422c362 SHA512 0d202ffddbf3d7479446e3deb951f3266d67063242ee1b930034b277f3b228326dc99feab0f5b61db64ef973bdd1e77d3d3fc57f6d84f9026c04c2f480423da7 WHIRLPOOL 5bca2ca7b4e812ef8f157cc59f9c673989dbff0c6a8518734b2e2e3877aff8c0637ec5f184fddaea563c55505f2c2e0f69f70e899a9fb92db92db590dab91f20
 EBUILD factory_girl-4.2.0-r1.ebuild 667 SHA256 be755b3a37b43a1ac58ba15c7b83f4c22cbe5c18c6ea646116bfc813d222ed80 SHA512 62acd3fdf8bfb970f2c1aefc7d57f9ef4276e5d21a7e64492149c703f64d160db9a58b5905f764790ea8bb8ca2da8b1a07a0260e3b8c16cb3395d7dd97c22c18 WHIRLPOOL 87cdc72394e5a04cb4b07f063b0a0319c6c19c6feb4fffec48476c20d2c2aa5ca6d8da81f13b46dca3c7e19f72c6d9b5c2b491eaaad40a1c875618ee4d67aebb
 EBUILD factory_girl-4.4.0.ebuild 730 SHA256 527da3d5e2478834170e0992302c7a06be617d7d1118ad130f53ca4245a17e09 SHA512 33a9ece91d29c7adf25198bc4016b87a45194fe178dbb005012323513b677983463b066f31f18f8541311ecba9477f46eb8fdb89a02ffd12243bcae86f512438 WHIRLPOOL 543db85392acb00452b0738876bd11b6b36bf12270963acba351e884ef65410197b06ebe08f2f4e0f959dd54fcdcc30d44c6acedf030c0e7aea09997f521761e
-MISC ChangeLog 971 SHA256 fe0f4db867123e0b28d3d7f5298e528b79e6c8e2d60d989827602e2e7e888147 SHA512 1a1b73c349375623bd27b14e42e1b9ae080740a7fd1dd2106bd589ff04c69a6a53ca49518c9ec37a16dcf50512c340645026387160fe78ba0767af5fc030fe4a WHIRLPOOL 84e3d58bfbdef56aaab40a389ff8a1ed00df488d69185461e57d556f55b0b386d2e7c4193b4c6bc73fefef95234ce94ea954a5528e07216f7cdcbee49719966e
+EBUILD factory_girl-4.5.0.ebuild 1291 SHA256 dfe621820c1a067e30b8ea899c485c69899cffe59a8f5bddc44cdd8e59ace1dc SHA512 42fed20c77ab328b69069ec780606ed0c13f9a44590a2be2c56107e1bbfc4d32c74329540485d7c0dbdd5fa6d17f3b373a7e6d6585f6ed3aaf05088f87a7bf9c WHIRLPOOL 3a218613e5aac4e0b5841104f7971286fa9f40afa87d892c7fc8fc6da77a8c6adc40a3d6269e9a706cb525f5f133948b248010aacf4c4f94bc3af738ae479768
+MISC ChangeLog 1226 SHA256 654d88642fd8d31c090d9a5033638026942caa70db691bc237b52c10ccc806b4 SHA512 1831de37afe0e7473f320fc29dee9061ca9c5ccef84ed8efdf132f777b801a4f41b9f1fae9f54b7641c2f15e5a60b3681c432df24d27c0663345de0c7bd53950 WHIRLPOOL aa759c9384dd6ebd2a069880d2fc49796a98240123e67dfc606ca00185d5e8f7dfa504b815953801b609dce70393ed96bea5ac033f3a63bae101af51e3ea5833
 MISC metadata.xml 275 SHA256 ddea40fdfb3de36c4e8ec395d93195500089d461dc340ca376d7d93a3b6c3c70 SHA512 23a0fff59aeb0bceae496a74b75da3bc80d71fe9c60f63b1c20eecb97dd75fa32180457dfca21871c1e8d0a34f85a4a201a0eae0b46cbf91abb0fc8322d0b9f2 WHIRLPOOL 9f6a81dc72dc72656e6c32be440c3276225a7d7d09b4b1833db219eee071d3916e8eda3bdf6dbde6db1e5a6c9b4972fa6bb6e6ddecd2302941d9fdf283246761
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlTph2oACgkQiIP6VqMIqNd9PAD/edQmmY7XZu0fRw8w3BCUUVta
+XXcVfCvQd7lvIBSp0x4BAJdbBeAGCTCIHQ76kKfaYv5aXhnVaWgnUSFAUbUdrYgj
+=+zVV
+-----END PGP SIGNATURE-----
