@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/factory_girl
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/factory_girl/ChangeLog,v 1.5 2014/08/05 22:59:08 mrueg Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/factory_girl/ChangeLog,v 1.6 2015/02/22 07:38:11 graaff Exp $
+
+*factory_girl-4.5.0 (22 Feb 2015)
+
+  22 Feb 2015; Hans de Graaff <graaff@gentoo.org> +factory_girl-4.5.0.ebuild:
+  Version bump. Run specs for the currently installed rails version. Add
+  ruby20, ruby21. Drop arm due to new test dependency, bug 540978.
 
   05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> factory_girl-4.2.0-r1.ebuild:
   Remove ruby18 target.
